2003-07-29  Derek Price  <derek@ximbiot.com>

	* getpass.m4: New file form GNULIB.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* getline.m4: Sync this file with GNULIB.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* gethostname.m4: New file from GNULIB.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* gettext.m4: Assume the existance of <limits.h> & <stddef.h> per C89.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* strerror.m4: New file from GNULIB.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* memmove.m4: New file from GNULIB.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* lstat.m4: Call the *_ONCE functions.  This almost syncs us with
	GNULIB.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* getline.m4: Merge more of Bruno Habile's GNULIB changes to this file
	so our fork is less divergent.
	* getndelim2.m4: Ditto.
	* getnline.m4: Ditto.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getline.m4 (gl_PREREQ_GETLINE): s/gl_FUNC_GETNDELIM2/gl_GETNDELIM2/.
	* getnline.m4 (gl_FUNC_GETNLINE): Rename to...
	(gl_GETNLINE): ...this and s/gl_FUNC_GETNDELIM2/gl_GETNDELIM2/.
	* getndelim2.m4 (gl_FUNC_GETNDELIM2): Rename to...
	(gl_GETNDELIM2): ...this.
	(Merging some of Bruno Habile's changes from GNULIB.)

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getndelim2.m4: New file.
	* ssize_t.m4: Ditto.

	* getline.m4: Depend on getndelim2 rather than getnline.
	* getnline.m4: Depend on getndelim2.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getline.m4 (AM_FUNC_GETLINE): Define HAVE_GETDELIM when a working
	GNU getline() is found.
	(Thanks again to Steve McIntyre <stevem@cvshome.org> for the report.)

2003-07-16  Derek Price  <derek@ximbiot.com>

	* pathmax.m4: New file.
	* Makefile.am (EXTRA_DIST): Add new file.
	* Makefile.in: Regenerated.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* getline.m4: New file based on GNULIB and resubmitted to GNULIB.
	* getnline.m4: Ditto.

	* Makefile.am (EXTRA_DIST): Add new files.

	* Makefile.in: Regenerated.
